# journaltx-pybot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  TELEGRAM.md  docker-compose.yml  pyproject.toml
config/filters/: default.json
config/profiles/: balanced.json  conservative.json  degens_only.json  exploratory.json
docs/: FEEDBACK_CHANGES.md  FINAL_ALERT_EXAMPLE.md  IMPROVED_FILTERS.md  JSON_CONFIG_GUIDE.md
journaltx/: __init__.py
journaltx/core/: __init__.py  config.py  db.py  models.py  profiles.py  utils.py
journaltx/filters/: __init__.py  early_meme.py  market_cap.py  signals.py
journaltx/guardrails/: __init__.py  rules.py
journaltx/ingest/: __init__.py  manual.py  token_resolver.py
journaltx/ingest/quicknode/: __init__.py  lp_events.py  raydium_decoder.py  raydium_subscriptions.py  schemas.py  transaction_parser.py  volume_events.py
journaltx/notify/: telegram.py  telegram_bot.py
journaltx/review/: __init__.py  screener.py  stats.py  weekly.py
journaltx/trading/: __init__.py  executor.py  jupiter.py  spending.py  wallet.py
scripts/: alert.py  export_csv.py  get_chat_id.py  listen.py  log_trade.py  profile.py  review_week.py  screener.py  setup.py  setup_telegram.py  test_filter.py  test_telegram.py
tests/: test_early_meme_filter.py  test_raydium_decoder.py
